# tuned

./: .gitignore  HANDOFF.md  KICKOFF.md  README.md  REQUIREMENTS.md
.github/workflows/: android.yml  core.yml  license.yml  release.yml  web.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DSP.md  INSTRUMENTS.md  RELEASING.md  REQUIREMENTS.md  TESTING.md
scripts/: build-android-libs.sh  build-wasm.sh
tuner-android/: .editorconfig  build.gradle.kts  gradle.properties  settings.gradle.kts
tuner-android/app/: build.gradle.kts  proguard-rules.pro
tuner-android/app/src/androidTest/kotlin/com/opentuner/: NativeTunerInstrumentedTest.kt
tuner-android/app/src/main/: AndroidManifest.xml
tuner-android/app/src/main/kotlin/com/opentuner/: MainActivity.kt  Models.kt  NativeTuner.kt  Screens.kt  Smoothing.kt  (+2 more)
tuner-android/app/src/main/res/values/: strings.xml  themes.xml
tuner-core/: Cargo.toml
tuner-core/benches/: pitch_bench.rs
tuner-core/src/: cents.rs  chord.rs  chroma.rs  fft.rs  fretboard.rs  lib.rs  noise.rs  pitch.rs  strum.rs  tuner.rs  tunings.rs
tuner-core/src/bindings/: jni.rs  json.rs  mod.rs  wasm.rs
tuner-core/tests/: corpus.rs  synthetic.rs
tuner-web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tuner-web/src/: App.tsx  smoothing.ts  types.ts
tuner-web/src/audio/: MicEngine.ts  protocol.ts  tuner.worker.ts
tuner-web/src/audio/worklet/: capture-worklet.js
tuner-web/src/components/: CentsMeter.tsx  ChordDisplay.tsx  ChordView.tsx  NavBar.tsx  PitchDisplay.tsx  StrumGrid.tsx  StrumView.tsx  TuneView.tsx  TunerScreen.tsx  TuningPicker.tsx  VoicingLine.tsx
tuner-web/tests/: smoothing.test.ts  wasm-smoke.test.ts
(+3 files in other folders)
